[package]
name = "orc2_experiment"
version = "0.1.0"
edition = "2024"

[features]
default = ['llvm11-0']
llvm8-0 = ["llvm-sys-80", "inkwell-80"]
llvm9-0 = ["llvm-sys-90", "inkwell-90"]
llvm10-0 = ["llvm-sys-100", "inkwell-100"]
llvm11-0 = ["llvm-sys-110", "inkwell-110"]
llvm12-0 = ["llvm-sys-120", "inkwell-120"]
llvm13-0 = ["llvm-sys-130", "inkwell-130"]
llvm14-0 = ["llvm-sys-140", "inkwell-140"]
llvm15-0 = ["llvm-sys-150", "inkwell-150"]
llvm16-0 = ["llvm-sys-160", "inkwell-160"]
llvm17-0 = ["llvm-sys-170", "inkwell-170"]
llvm18-1 = ["llvm-sys-181", "inkwell-181"]
llvm19-1 = ["llvm-sys-191", "inkwell-191"]
llvm20-1 = ["llvm-sys-201", "inkwell-201"]

# [dependencies.llvm-sys-181]
# optional = true
# package = "llvm-sys"
# version = "181.2.0"

# [dependencies.inkwell-181]
# optional = true
# package = "inkwell"
# path = "inkwell"
# # version = "0.6.0"
# features = ["llvm18-1"]

[dependencies]
inkwell-80 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm8-0"] }
llvm-sys-80 = { package = "llvm-sys", version = "80.3", optional = true }

inkwell-90 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm9-0"] }
llvm-sys-90 = { package = "llvm-sys", version = "90.2.2", optional = true }

inkwell-100 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm10-0"] }
llvm-sys-100 = { package = "llvm-sys", version = "100.2.4", optional = true }

inkwell-110 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm11-0", "vtune"] }
llvm-sys-110 = { package = "llvm-sys", version = "110.0.4", optional = true }

inkwell-120 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm12-0"] }
llvm-sys-120 = { package = "llvm-sys", version = "120.3.2", optional = true }

inkwell-130 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm13-0"] }
llvm-sys-130 = { package = "llvm-sys", version = "130.1.2", optional = true }

inkwell-140 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm14-0"] }
llvm-sys-140 = { package = "llvm-sys", version = "140.1.3", optional = true }

inkwell-150 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm15-0"] }
llvm-sys-150 = { package = "llvm-sys", version = "150.2.1", optional = true }

inkwell-160 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm16-0"] }
llvm-sys-160 = { package = "llvm-sys", version = "160.2.1", optional = true }

inkwell-170 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm17-0"] }
llvm-sys-170 = { package = "llvm-sys", version = "170.2.0", optional = true }

inkwell-181 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm18-1"] }
llvm-sys-181 = { package = "llvm-sys", version = "181.2.0", optional = true }

inkwell-191 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm19-1"] }
llvm-sys-191 = { package = "llvm-sys", version = "191.0.0", optional = true }

inkwell-201 = { package = "inkwell", path = "inkwell", optional = true, default-features = false, features = ["target-x86", "llvm20-1"] }
llvm-sys-201 = { package = "llvm-sys", version = "201.0.0", optional = true }